Chamber Site Updated with no contact info on mobile and fixed js names

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -66,18 +66,7 @@ header h1 {
 }
 
 header p {
-    font-size: 3.2vw;
-    line-height: 2rem;
-}
-
-header p:nth-of-type(1) {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-}
-
-header p:nth-of-type(2) {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
+    display: none;
 }
 
 #menuHeader {
