--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -24,6 +24,7 @@
     }
 
     header p {
+        display: block;
         font-size: 16px;
         text-align: left;
         line-height: 30px;
